src/test/ui/issues/issue-41776.rs
fn main() {
    include!(line!()); //~ ERROR argument must be a string literal
}
